--- a/.github/workflows/nbconvert.yaml
+++ b/.github/workflows/nbconvert.yaml
@@ -1,14 +1,16 @@
 name: Convert slides
-on: push
+
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: Check out repository
-      uses: actions/checkout@v2
-      with:
-        ref: ${{ github.head_ref }}
-
+    - uses: actions/checkout@v3
     - name: nbconvert .ipynb's
       uses: runsascoded/nbconvert@v1.2
       with:
