--- a/.github/workflows/nbconvert.yaml
+++ b/.github/workflows/nbconvert.yaml
@@ -20,7 +20,7 @@ jobs:
       - name: Update analysis notebook
         run: |
           python -m pip install jupyter nbconvert nbformat
-          jupyter nbconvert --to slides --execute notebook/explorer.ipynb --ExecutePreprocessor.kernel_name='python3'
+          jupyter nbconvert --to slides --execute notebook/explorer.ipynb --ExecutePreprocessor.kernel_name='python3' --SlidesExporter.reveal_transition='none' --template=nbconvert_template --TemplateExporter.extra_template_basedirs=notebook/
       - name: commit updated notebook
         uses: EndBug/add-and-commit@v7
         with:
